--- a/noticias.html
+++ b/noticias.html
@@ -1,68 +1,118 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Este es un sitio con noticias y contenido acerca de la exploración espacial">
-    <meta name="keywords" content="espacio, exploración, sol, luna, sistema solar, cohete, nave espacial, sonda, astronauta, NASA, estación espacial internacional, space, exploration, historia, noticias, telescopio, moon, sun, stars, estrellas">
-    <!--Realizo conexion para fuentes-Google Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <!--Mando llamar hoja de estilos-->
-    <link rel="stylesheet" href="css/estilos.css" />
-    <title>OFTW-Noticias de exploración espacial</title>
-  </head>
-  <body>
-    <main>
-      <div id="grillaContenido">
-        <header class="border">
-          <h1 class="animate__animated animate__bounce">
-            <a href="index.html"
-              >Out of this WORLD.......{exploración espacial}</a
-            >
-          </h1>
-        </header>
-        <section id="historiaContenido" class="border">
-          <h2 class="h2_principal">Noticias</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-            accusantium eaque esse ratione, magnam, animi, sapiente et cumque
-            molestiae corrupti doloremque! Labore fugiat sed perspiciatis
-            laborum similique distinctio? Dolore, reprehenderit.<br />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Este es un sitio con noticias y contenido acerca de la exploración espacial">
+  <meta name="keywords"
+    content="espacio, exploración, sol, luna, sistema solar, cohete, nave espacial, sonda, astronauta, NASA, estación espacial internacional, space, exploration, historia, noticias, telescopio, moon, sun, stars, estrellas">
+  <!--Realizo conexion para fuentes-Google Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <!--Mando llamar hojas de estilos para animaciones-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  <!--Mando llamar hojas de estilos-->
+  <link rel="stylesheet" href="/css/bootstrap.min.css" />
+  <!--Mando llamar hojas de estilos de Bootstrap v5-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!--Mando llamar hojas de estilos para iconos en Bootstrap-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <!--Mando llamar mis hojas de estilos-->
+  <link rel="stylesheet" href="css/estilos.css" />
+  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+  <title>OFTW-Noticias de exploración espacial</title>
+</head>
 
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint
-            inventore tempora odit dolorum perferendis provident soluta facilis
-            adipisci quisquam quam cupiditate, accusamus explicabo ullam
-            molestiae molestias nihil incidunt, ab eaque.<br /><br />
-            Iusto perspiciatis, dolores, libero recusandae consequuntur, quod
-            sit commodi odit reprehenderit fuga placeat. Quaerat, distinctio
-            adipisci. Accusantium sequi placeat mollitia, natus ad nobis ex
-            molestiae laboriosam repellendus itaque consectetur explicabo!
-            Voluptatem, earum. Rerum expedita vel facilis nihil doloremque
-            corporis maiores molestiae esse iusto porro repellat obcaecati dicta
-            magnam voluptatem exercitationem, sunt provident dolorem velit quae
-            nam voluptatibus vero earum reiciendis?
-          </p>
-        </section>
+<body>
+  <header class="container-fluid border border-light bg-secondary bg-opacity-50" id="arriba">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid" style="border: 20%;">
+        <a class="navbar-brand  text-wrap" href="index.html" aria-current="true">
+          <img src="img/logo.png" alt="logo_space" width="70" height="50" />
+          OFTW
+        </a>
 
-        <nav class="border">
-          <ul>
-            <li><a href="historia.html">Historia</a></li>
-            <br />
-            <li><a href="noticias.html">Noticias</a></li>
-            <br />
-            <li><a href="telescopio.html">Telescopio James Web</a>b</li>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link fw-bold" aria-current="page" href="historia.html">Historia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold" aria-current="page" href="noticias.html">Noticias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold" aria-current="page" href="telescopio.html">Telescopio James Webb</a>
+            </li>
           </ul>
-        </nav>
-
-        <footer class="border"><img alt="tt" src="img/sm.jpg" /></footer>
+        </div>
       </div>
-    </main>
-  </body>
+    </nav>
+  </header>
+  <main class="container-fluid">
+    <div class="row border border-light ">
+      <div class="col-12 col-md-12 col-lg-6 p-5 pt-0 pb-0 border bg-warning bg-gradient bg-opacity-75">
+        <p class="text-justify">
+        <h2 class="h2_principal">
+          Noticias exploración espacial
+        </h2>
+        <h2 class="h2_principal">Luna de sangre en mayo de 2022</h2>
+        En mayo de 2022 esperamos un glorioso espectáculo celestial: el eclipse lunar total se verá desde las Américas,
+        África y una parte de Eurasia.
+        <br>
+        ¿A qué hora es el eclipse lunar en mayo de 2022?<br>
+
+        La fase completa del eclipse lunar total comenzará el 16 de mayo, a las 03:30 GMT, cuando la sombra de la Tierra
+        cubra completamente la Luna. Esta fase durará 85 minutos, lo que lo convierte en el eclipse total más largo
+        desde 2018. La vista que merece la pena comienza incluso antes; aquí está toda la línea temporal del eclipse del
+        16 de mayo:
+
+        <ul>
+
+          <li> La fase penumbral comienza a las 01:33 GMT. Esta fase no se ve a simple vista, por lo que solo es
+            interesante para astrónomos experimentados;</li>
+          <li>La fase parcial comienza a las 02:28 GMT. Aquí es cuando puedes empezar a observar. La Luna pasa a través
+            de la sombra umbral de la Tierra que bloquea la luz del Sol, por lo que una parte del disco lunar parece
+            oscurecida;
+          <li>La fase completa comienza a las 03:30 GMT, alcanzando su punto máximo a las 04:11 GMT. La Luna entra
+            plenamente en la sombra oscura del umbral de la Tierra;</li>
+          <li>La fase completa termina a las 04:54 GMT. No dejes de observar aquí y observa la sombra oscura del umbral
+            que sale del disco lunar;</li>
+          <li>La fase parcial termina a las 05:55 GMT. Desde entonces, el eclipse no es visible a simple vista;</li>
+          <li>La fase penumbral finaliza a las 06:51 GMT.</li>
+        </ul>
+        Si no estás seguro de cuándo ver el eclipse total desde tu ubicación, utiliza la aplicación Eclipse Guide.
+        Calcula los tiempos correctos en función de tu ubicación y te proporciona información completa, incluido un
+        calendario de eclipses, visualizaciones y una lista de lugares con la mejor vista.
+
+        -- <a href="https://starwalk.space/es/news/total-lunar-eclipse-may-2022/" target="_blank">[Fuente: StarWalk]</a>
+
+        </p>
+
+      </div>
+      <div class="col-12 col-md-12 col-lg-6 p-5 pt-5 pt-0 border bg-warning bg-gradient bg-opacity-75 ">
+        <img src="img/luna_sangre.jpg" class="img-fluid" alt="">
+      </div>
+
+      <div class="col-12 border bg-secondary bg-opacity-50 p-3 d-flex justify-content-center">
+
+        <a href="https://twitter.com/gabrielgarciam" target="_blank"><i class="bi bi-twitter">Contacto </i></a>
+        <a href="#arriba">-<i class="bi bi-arrow-up-circle-fill">Ir arriba</i></a>
+
+      </div>
+    </div>
+  </main>
+</body>
+
 </html>
