Entrega final Desarrollo Web

--- a/enlaces.html
+++ b/enlaces.html
@@ -27,7 +27,7 @@
   <!--Mando llamar mis hojas de estilos-->
   <link rel="stylesheet" href="css/estilos.css" />
   <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-  <title>OFTW-Noticias de exploración espacial</title>
+  <title>OFTW-Enlaces de exploración espacial</title>
 </head>
 
 <body>
@@ -65,48 +65,68 @@
   </header>
   <main class="container-fluid">
     <div class="row border border-light ">
-      <div class="col-12 col-md-12 col-lg-6 p-5 pt-0 pb-0 border bg-warning bg-gradient bg-opacity-75">
+      <div class="col-12 col-md-12 col-lg-12 p-5 pt-0 pb-0 border bg-warning bg-opacity-75">
         <p class="text-justify">
         <h2 class="h2_principal">
-          Noticias exploración espacial
+          Enlaces a sitios de exploración espacial
         </h2>
-        <h2 class="h2_principal">Luna de sangre en mayo de 2022</h2>
-        En mayo de 2022 esperamos un glorioso espectáculo celestial: el eclipse lunar total se verá desde las Américas,
-        África y una parte de Eurasia.
-        <br>
-        ¿A qué hora es el eclipse lunar en mayo de 2022?<br>
+        Eata es una lista de sitios con gran contenido acerca de la exploración espacial, algunos inglés, otros en
+        español.
+        <br> <br>
 
-        La fase completa del eclipse lunar total comenzará el 16 de mayo, a las 03:30 GMT, cuando la sombra de la Tierra
-        cubra completamente la Luna. Esta fase durará 85 minutos, lo que lo convierte en el eclipse total más largo
-        desde 2018. La vista que merece la pena comienza incluso antes; aquí está toda la línea temporal del eclipse del
-        16 de mayo:
+        <div class="d-flex  flex-wrap mb-3 ">
 
-        <ul>
+          <div class="card me-5 mb-2" style="width: 18rem;">
+            <img src="img/slooh.jpg" class="card-img-top" alt="...">
+            <div class="card-body bg-secondary bg-opacity-50">
+              <h5 class="card-title">Explora el espacio como un astrónomo</h5>
+              <p class="card-text">Sitio que permite utilizar un telescopio a distancia.</p>
+              <a href="https://www.education.slooh.com/" target="_blank" class="btn btn-dark stretched-link">Visitar</a>
+            </div>
+          </div>
 
-          <li> La fase penumbral comienza a las 01:33 GMT. Esta fase no se ve a simple vista, por lo que solo es
-            interesante para astrónomos experimentados;</li>
-          <li>La fase parcial comienza a las 02:28 GMT. Aquí es cuando puedes empezar a observar. La Luna pasa a través
-            de la sombra umbral de la Tierra que bloquea la luz del Sol, por lo que una parte del disco lunar parece
-            oscurecida;
-          <li>La fase completa comienza a las 03:30 GMT, alcanzando su punto máximo a las 04:11 GMT. La Luna entra
-            plenamente en la sombra oscura del umbral de la Tierra;</li>
-          <li>La fase completa termina a las 04:54 GMT. No dejes de observar aquí y observa la sombra oscura del umbral
-            que sale del disco lunar;</li>
-          <li>La fase parcial termina a las 05:55 GMT. Desde entonces, el eclipse no es visible a simple vista;</li>
-          <li>La fase penumbral finaliza a las 06:51 GMT.</li>
-        </ul>
-        Si no estás seguro de cuándo ver el eclipse total desde tu ubicación, utiliza la aplicación Eclipse Guide.
-        Calcula los tiempos correctos en función de tu ubicación y te proporciona información completa, incluido un
-        calendario de eclipses, visualizaciones y una lista de lugares con la mejor vista.
+          <div class="card me-5 mb-2" style="width: 18rem;">
+            <img src="img/ecos.jpg" class="card-img-top" alt="...">
+            <div class="card-body bg-secondary bg-opacity-50">
+              <h5 class="card-title">Ecos de un mundo estrellado</h5>
+              <p class="card-text">Uno de mis canales de YouTube preferidos en español.</p>
+              <a href="https://www.youtube.com/c/Ecosdeunmundoestrellado/videos" target="_blank"
+                class="btn btn-dark stretched-link">Visitar</a>
+            </div>
+          </div>
 
-        -- <a href="https://starwalk.space/es/news/total-lunar-eclipse-may-2022/" target="_blank">[Fuente: StarWalk]</a>
-
+          <div class="card me-5 mb-2" style="width: 18rem;">
+            <img src="img/solar-views.jpg" class="card-img-top" alt="...">
+            <div class="card-body bg-secondary bg-opacity-50">
+              <h5 class="card-title">Solarviews</h5>
+              <p class="card-text">Vistas del sistema solar.</p>
+              <a href="https://solarviews.com/span/homepage.htm" target="_blank"
+                class="btn btn-dark stretched-link">Visitar</a>
+            </div>
+          </div>
+          <div class="card me-5 mb-2" style="width: 18rem;">
+            <img src="img/geo.jpg" class="card-img-top" alt="...">
+            <div class="card-body bg-secondary bg-opacity-50">
+              <h5 class="card-title">GeoEnciclopedia</h5>
+              <p class="card-text">Vistas del sistema solar.</p>
+              <a href="https://www.geoenciclopedia.com/" target="_blank"
+                class="btn btn-dark stretched-link">Visitar</a>
+            </div>
+          </div>
+          <div class="card me-5 mb-2" style="width: 18rem;">
+            <img src="img/space.jpg" class="card-img-top" alt="...">
+            <div class="card-body bg-secondary bg-opacity-50">
+              <h5 class="card-title">SPACE</h5>
+              <p class="card-text">Space.com - sitio en inglés con gran contenido acerca del espacio.</p>
+              <a href="https://www.space.com" target="_blank"
+                class="btn btn-dark stretched-link">Visitar</a>
+            </div>
+          </div>
+        </div>
         </p>
 
       </div>
-      <div class="col-12 col-md-12 col-lg-6 p-5 pt-5 pt-0 border bg-warning bg-gradient bg-opacity-75 ">
-        <img src="img/luna_sangre.jpg" class="img-fluid" alt="">
-      </div>
+
 
       <div class="col-12 border bg-secondary bg-opacity-50 p-3 d-flex justify-content-center">
 
