--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
       </div>
     </nav>
   </header>
-  <main class="container-fluid" >
+  <main class="container-fluid">
     <div class="row justify-content-center ">
-      <div class="col-12 col-sd-6 col-lg-4 p-3 pt-0 pb-0 border bg-warning bg-gradient bg-opacity-75">
+      <div class="col-12 col-lg-4 p-3 pt-0 pb-0 border bg-warning bg-gradient bg-opacity-75">
         <a href="historia.html">
           <p>
             <h2 class="h2_principal">
-              Historia de la exploración espacial
+              Historia de la exploración espacial - <i class="bi bi-arrow-right-square-fill"></i>
             </h2>
             El Universo siempre ha fascinado a los seres humanos, que desde la Antigüedad soñaban con alcanzar mundos
             diferentes al suyo. Algunos escritores y cineastas del siglo XIX y principios del XX como Julio Verne y
@@ -69,53 +69,56 @@
             se
             materializó.
         </a> -- <a href="https://www.geoenciclopedia.com/exploracion-espacial/" target="_blank"> [Fuente:
-          GeoEnciclopedia]</a>
-
-        <img src="img/space_eploration.jpg" class="img-fluid rounded" alt="">
-
+          GeoEnciclopedia]</a><br><br>
         </p>
+        <div class="pb-5"></div>
+        <div class="pb-5">
+          <img src="img/space_eploration.jpg" class="img-fluid rounded float-end" alt="Imagen exploracion espacial">
+        </div>
       </div>
       <div class="col-12 col-lg-4 p-3 pt-0 pb-0 border bg-warning bg-gradient bg-opacity-75">
         <a href="noticias.html">
           <p>
             <h2 class="h2_principal">
-              Noticias
+              Noticias - <i class="bi bi-arrow-right-square-fill"></i>
             </h2>
             <h6>Luna de sangre en mayo de 2022: ¿cómo verla?</h6>
             En mayo de 2022 esperamos un glorioso espectáculo celestial: el eclipse lunar total se verá desde las
-            Américas, África y una parte de Eurasia.<br><br>
-            <h6>¿A qué hora es el eclipse lunar en mayo de 2022?</h6>
-
-            La fase completa del eclipse lunar total comenzará el 16 de mayo, a las 03:30 GMT, cuando la sombra de la
-            Tierra cubra completamente la Luna.        </a> -- <a href="https://starwalk.space/es/news/total-lunar-eclipse-may-2022/" target="_blank"> [Fuente:
-              Starwalk]</a>
-            <img src="img/luna_sangre.jpg" class="img-fluid rounded" alt="blood_moon">
-          </p>
+            Américas, África y una parte de Eurasia.--<a href="https://starwalk.space/es/news/total-lunar-eclipse-may-2022/" target="_blank"> [Fuente:
+          Starwalk]</a><br><br><br>
+        </a> 
+        </p>
+<div class="pb-5"></div>
+        <div class="pb-5">
+          <img src="img/luna_sangre.jpg" class="img-fluid rounded float-end" alt="Imagen exploracion espacial">
+        </div>
         </a>
       </div>
-      <div class="col-12 col-lg-4 p-3 pt-0 pb-0 border bg-warning bg-gradient  bg-gradient bg-opacity-75">
+      <div class="col-12 col-lg-4 p-3 pt-0 pb-0 border bg-warning bg-gradient bg-opacity-75">
         <a href="telescopio.html">
           <p>
             <h2 class="h2_principal">
-              Telescopio espacial James Webb
+              Telescopio espacial James Webb - <i class="bi bi-arrow-right-square-fill"></i>
             </h2>
 
             El Telescopio Espacial James Webb es el más grande, poderoso y complejo jamás construido. Webb resolverá
             misterios de nuestro sistema solar, mirará más allá de mundos distantes alrededor de otras estrellas, y
-            averiguará las misteriosas estructuras y orígenes de nuestro universo y nuestro lugar en el mismo. Webb es
-            un programa internacional liderado por la NASA y sus socios, ESA (Agencia Europea Espacial) y la Agencia
-            Espacial Canadiense. --
-            [Fuente: <a href="https://blogs.nasa.gov/webb/" target="_blank">James Webb Space Telescope]</a>
+            averiguará las misteriosas estructuras y orígenes de nuestro universo y nuestro lugar en el mismo.  --
+            [Fuente: <a href="https://blogs.nasa.gov/webb/" target="_blank">James Webb Space Telescope]</a><br><br>
 
         </a>
-        <img src="img/james-webb-space-telescope.jpg" class="img-fluid rounded" alt="">
-
+        </p>
+        <div class="pb-5"></div>
+        <div class="pb-5">
+          <img src="img/james-webb-space-telescope.jpg" class="img-fluid rounded" alt="Imagen exploracion espacial">
+        </div>
 
       </div>
       <div class="col-12 border bg-secondary bg-opacity-50 p-3 d-flex justify-content-center">
 
         <a href="https://twitter.com/gabrielgarciam" target="_blank"><i class="bi bi-twitter">Contacto </i></a>
-        <a href="#arriba">-<i class="bi bi-arrow-up-circle-fill">Ir arriba</i></a>
+        <a href="#arriba">- - -<i class="bi bi-arrow-up-circle-fill">Ir arriba</i></a>
+        <a href="enlaces.html">- - -<i class="bi bi-link">Enlaces</i></a>
 
       </div>
     </div>
