--- a/telescopio.html
+++ b/telescopio.html
@@ -55,6 +55,9 @@
             <li class="nav-item">
               <a class="nav-link fw-bold" aria-current="page" href="telescopio.html">Telescopio James Webb</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold" aria-current="page" href="enlaces.html">Enlaces</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -89,7 +92,8 @@
       <div class="col-12 border bg-secondary bg-opacity-50 p-3 d-flex justify-content-center">
 
         <a href="https://twitter.com/gabrielgarciam" target="_blank"><i class="bi bi-twitter">Contacto </i></a>
-        <a href="#arriba">-<i class="bi bi-arrow-up-circle-fill">Ir arriba</i></a>
+        <a href="#arriba">- - -<i class="bi bi-arrow-up-circle-fill">Ir arriba</i></a>
+        <a href="enlaces.html">- - -<i class="bi bi-link">Enlaces</i></a>
 
       </div>
     </div>
