--- a/historia.html
+++ b/historia.html
@@ -56,6 +56,9 @@
               <a class="nav-link fw-bold" aria-current="page" href="telescopio.html">Telescopio James Webb</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link fw-bold" aria-current="page" href="meteorologia.html">Calculadora Meteorológica</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link fw-bold" aria-current="page" href="enlaces.html">Enlaces</a>
             </li>
           </ul>
