--- a/meteorologia.html
+++ b/meteorologia.html
@@ -24,10 +24,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+    
   <!--Mando llamar mis hojas de estilos-->
   <link rel="stylesheet" href="css/estilos.css" />
   <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-  <title>OFTW-Noticias de exploración espacial</title>
+  <title>OFTW-Calculadora Meteorológica</title>
 </head>
 
 <body>
@@ -61,6 +62,8 @@
             <li class="nav-item">
               <a class="nav-link fw-bold" aria-current="page" href="enlaces.html">Enlaces</a>
             </li>
+
+
           </ul>
         </div>
       </div>
@@ -71,44 +74,32 @@
       <div class="col-12 col-md-12 col-lg-6 p-5 pt-0 pb-0 border bg-warning bg-gradient bg-opacity-75">
         <p class="text-justify">
         <h2 class="h2_principal">
-          Noticias exploración espacial
+          Calculadora Meteorológica [version BETA - JavaScript CoderHouse]
         </h2>
-        <h2 class="h2_principal">Luna de sangre en mayo de 2022</h2>
-        En mayo de 2022 esperamos un glorioso espectáculo celestial: el eclipse lunar total se verá desde las Américas,
-        África y una parte de Eurasia.
+
         <br>
-        ¿A qué hora es el eclipse lunar en mayo de 2022?<br>
+        En esta sección podrás realizar cálculos meteorológicos.
 
-        La fase completa del eclipse lunar total comenzará el 16 de mayo, a las 03:30 GMT, cuando la sombra de la Tierra
-        cubra completamente la Luna. Esta fase durará 85 minutos, lo que lo convierte en el eclipse total más largo
-        desde 2018. La vista que merece la pena comienza incluso antes; aquí está toda la línea temporal del eclipse del
-        16 de mayo:
+        Los primeros que puedes hacer son:
 
-        <ul>
-
-          <li> La fase penumbral comienza a las 01:33 GMT. Esta fase no se ve a simple vista, por lo que solo es
-            interesante para astrónomos experimentados;</li>
-          <li>La fase parcial comienza a las 02:28 GMT. Aquí es cuando puedes empezar a observar. La Luna pasa a través
-            de la sombra umbral de la Tierra que bloquea la luz del Sol, por lo que una parte del disco lunar parece
-            oscurecida;
-          <li>La fase completa comienza a las 03:30 GMT, alcanzando su punto máximo a las 04:11 GMT. La Luna entra
-            plenamente en la sombra oscura del umbral de la Tierra;</li>
-          <li>La fase completa termina a las 04:54 GMT. No dejes de observar aquí y observa la sombra oscura del umbral
-            que sale del disco lunar;</li>
-          <li>La fase parcial termina a las 05:55 GMT. Desde entonces, el eclipse no es visible a simple vista;</li>
-          <li>La fase penumbral finaliza a las 06:51 GMT.</li>
-        </ul>
-        Si no estás seguro de cuándo ver el eclipse total desde tu ubicación, utiliza la aplicación Eclipse Guide.
-        Calcula los tiempos correctos en función de tu ubicación y te proporciona información completa, incluido un
-        calendario de eclipses, visualizaciones y una lista de lugares con la mejor vista.
-
-        -- <a href="https://starwalk.space/es/news/total-lunar-eclipse-may-2022/" target="_blank">[Fuente: StarWalk]</a>
-
+        <ol>
+          <li>
+            Calcular temperatura promedio para los siguientes cinco años en Ciudad de México, México.</li>
+          <li>
+            Consultar histórico de temperatura promedio de los últimos diez años en Ciudad de México, México.</li>
+        </ol>
+        <br>
+        En esta primera versión los resultados se mostrarán en la consola y el ingreso de datos por parte del usuario serán a través de un prompt sencillo de Javascript.
         </p>
 
       </div>
       <div class="col-12 col-md-12 col-lg-6 p-5 pt-5 pt-0 border bg-warning bg-gradient bg-opacity-75 ">
-        <img src="img/luna_sangre.jpg" class="img-fluid" alt="">
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0YaE1YWZRWw" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+
       </div>
 
       <div class="col-12 border bg-secondary bg-opacity-50 p-3 d-flex justify-content-center">
@@ -119,6 +110,10 @@
 
       </div>
     </div>
+    <script src="js/variables.js" defer></script>
+    <script src="js/funciones.js" defer></script>
+    <script src="js/calculadoraM.js" defer></script>
+   
   </main>
 </body>
 
