--- a/meteorologia.html
+++ b/meteorologia.html
@@ -24,7 +24,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-    
+  
+  <!-- Librerias CDN -->
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.0/build/global/luxon.min.js"></script>
   <!--Mando llamar mis hojas de estilos-->
   <link rel="stylesheet" href="css/estilos.css" />
   <link rel="icon" type="image/x-icon" href="img/favicon.ico">
@@ -150,6 +153,7 @@
 
       </div>
     </div>
+   
     <script src="js/variables.js" defer></script>
     <script src="js/modificaDom.js" defer></script>
     <script src="js/funciones.js" defer></script>
